--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-<h1>Hello World!
-</h1>
+### Hi there 👋
+<div aligne= "center"> 
+<h1 align="center">Software Developer STEEVEN GUALAN! </h1>
+</div>
+
+<img src="https://media.licdn.com/dms/image/D4E16AQGJiv02e6BowA/profile-displaybackgroundimage-shrink_350_1400/0/1715104516708?e=1720656000&v=beta&t=allnVDfCmgc8XZoC9mcXfN_ecNDVs1w7QPzyjKhHB5I" alt= "Software Developer STEEVEN GUALAN">
+
+<!--
+**Steeven064/Steeven064** is a ✨ _special_ ✨ repository because its `README.md` (this file) appears on your GitHub profile.
+
+Here are some ideas to get you started:
+
+- 🔭 I’m currently working on ...
+- 🌱 I’m currently learning ...
+- 👯 I’m looking to collaborate on ...
+- 🤔 I’m looking for help with ...
+- 💬 Ask me about ...
+- 📫 How to reach me: ...
+- 😄 Pronouns: ...
+- ⚡ Fun fact: ...
+-->
